conf/miniflux/miniflux-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: miniflux
  name: miniflux
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: miniflux
    task: server
