conf/miniflux/miniflux-ingress-tls.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http-redirect-miniflux
  # namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`miniflux.crookster.org`)
      services:
        - name: miniflux-http
          port: 8080
      middlewares:
        - name: redirect-to-https

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: https-miniflux

spec:
  entryPoints:
    - web-secure
  routes:
    - kind: Rule
      match: Host(`miniflux.crookster.org`)
      services:
        - name: miniflux-http
          port: 8080
  tls: {}
